--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "workspaces": [
     "libs/*"
   ],
-  "type": "module",
   "devDependencies": {
     "@types/node": "^20.12.12",
     "prettier": "^3.2.5",
@@ -12,7 +11,10 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@soldoc/json": "^0.1.0",
+    "@soldoc/soldoc": "^0.4.3",
     "directory-tree": "^3.5.1",
+    "fs-extra": "^11.2.0",
     "highlight.js": "^11.9.0",
     "markdown-it": "^14.1.0",
     "markdown-it-emoji": "^3.0.0",
@@ -20,11 +22,18 @@
     "mustache": "^4.2.0",
     "node-emoji": "^2.1.3",
     "pdf-from-html": "^0.1.2",
+    "solc": "git+https://git@github.com/EmilIvanichkovv/solc-js.git#commit=c747c5cfcf87a95abb6501572c55117f84fefa85",
     "soldoc": "^0.1.3-beta.2"
   },
   "dependenciesMeta": {
+    "solc": {
+      "unplugged": true
+    },
     "soldoc": {
       "unplugged": true
     }
+  },
+  "resolutions": {
+    "solc": "v0.8.25"
   }
 }
